--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,12 @@ jobs:
     - name: Building
       id: build
       run: npm run build
-    - name: Run server
-      id: run
-      run: npm run dev
+    - name: Cypress run
+      uses: cypress-io/github-action@v6
+      with:
+        start: npm run dev
+        wait-on: "http://localhost:3000"
+        wait-on-timeout: 120
+        browser: chrome
       env:
         GREETING: ${{ secrets.GREETING }}
